# fuchsian-rs

./: .gitignore  Cargo.toml  README.md
fuchsian/: Cargo.toml
fuchsian/src/: algebraic_extensions.rs  fuchsian_group.rs  group_action.rs  group_dynamics.rs  lib.rs  moebius.rs  set_extensions.rs
fuchsian/src/geometry/: basics.rs  boundary.rs  geodesics.rs  horocycle.rs  mod.rs
python-api/: Cargo.toml  pyproject.toml
python-api/examples/: geodesic_orbit.py  horocyclic_orbit.py  point_orbit.py
python-api/python/: example.py  geodesic_orbit.py  horocyclic_orbit.py  point_orbit.py
python-api/src/: lib.rs
