[package]
name = "fuchsian"
version = "0.0.1"
edition = "2021"
author = "Steffen"
description = "Fuchsian and hyperbolic geometry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"

[dev-dependencies]
approx = "0.5.1"